[workspace]
resolver = "2"
default-members = ["libs/rs-sdk-integration-tests"]
members = [
	"libs/rs-sdk/sdk",
	"libs/rs-sdk-integration-tests",
	"libs/rs-sdk/seda-sdk-macros",
	"libs/rs-sdk/examples",
]

[workspace.package]
rust-version = "1.78.0"

[workspace.dependencies]
anyhow = "1.0"
ctor = "0.4"
hex = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "2.0"
rand = "0.9"

seda-sdk-rs = { path = "./libs/rs-sdk/sdk" }
# For local development, use the following line:
# seda-sdk-macros = { path = "./libs/rs-sdk/seda-sdk-macros" }
# For publishing, use the following line:
seda-sdk-macros = { version = "1.0.0" }

[profile.release-wasm]
inherits = "release"
lto = "fat"
opt-level = "z"
