[package]
name = "seda-sdk-rs"
version = "1.0.0-rc.6"
edition = "2021"
rust-version.workspace = true

[features]
default = ["hide-panic-paths"]
hide-panic-paths = ["dep:ctor"]

[dependencies]
anyhow.workspace = true
ctor = { workspace = true, optional = true }
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
# TODO: macros feature to optionally enable macro usage
seda-sdk-macros.workspace = true
