[package]
name = "seda-sdk-macros"
version = "1.0.0"
edition = "2021"
description = "Macros for the SEDA SDK to create OP entrypoints easily."
license = "MIT"
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
